# easypanel-mcp

./: .env.example  .gitignore  Dockerfile  GITHUB_PUBLISH_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  config.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-docs.yml
_site/: index.html
_site/search/: search_index.json
_site/tools/overview/: index.html
_site/tools/services/: index.html
docs/: changelog.md  faq.md  index.md  troubleshooting.md
docs/advanced/: features.md
docs/assets/css/: custom.css
docs/examples/: advanced.md  basic.md  real-world.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/includes/: mkdocs.md
docs/integration/: ai-agents.md  claude-desktop.md  github-actions.md  n8n.md
docs/tools/: deployments.md  networks.md  overview.md  projects.md  services.md
src/: __init__.py  client.py  server.py
src/tools/: __init__.py  deployments.py  networks.py  projects.py  services.py
tests/: test_basic.py
